<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="player_1_s_name">Player 1\'s Name</string>
    <string name="player_2_s_name">Player 2\'s Name</string>
    <string name="enter_your_names">Enter Your Name</string>
    <string name="start_game">Start Game?</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="v_s_device">V/S Device</string>
    <string name="v_s_human">V/s Human</string>
    <string name="high_scores">High Scores</string>
    <string name="end_game">End Game?</string>
    <string name="play_again">Play Again?</string>
</resources>
